[metadata]
version = 0.0.0.0
license = Proprietary License
description = Test Tree DB View app.
author = Alexander Adler
author_email = lexadler.corp@gmail.com
url = https://github.com/lexadler/test-problem

[options]
python_requires = >=3.8
include_package_data = false
packages = find_namespace:
package_dir=
    =.

[options.packages.find]
include =
    treeview.*

[flake8]
exclude =
    .*
    __pycache__
    build
    eggs
    dist
    *_pb2.py
    *_pb2_grpc.py

ignore =
    # flake8-annotations: Missing type annotation for self in method
    ANN101
    # flake8-annotations: Missing type annotation for cls in classmethod
    ANN102

application_import_names = treeview
import_order_style = smarkets
inline_quotes = '
multiline_quotes = '
max_line_length = 99
max_complexity = 11
suppress_none_returning = true
show_source = true
statistics = true

[mypy]
namespace_packages = true
show_error_context = true
show_column_numbers = true
show_error_codes  = true
pretty  = true
color_output  = true
error_summary  = true
